--- a/socials.html
+++ b/socials.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<title>Соцсети - Vladislav12.03</title>
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -38,74 +39,74 @@
 				<img src="IMG_7332.jpeg" alt="Vladislav12.03" class="profile-avatar">
 				<h1 class="profile-name">Vladislav12.03</h1>
 				<div class="profile-location"><i class="fas fa-location-dot"></i> Украина, Киев</div>
-				<div class="profile-actions">
-					<a class="btn btn-secondary" href="mailto:vladislav.kostiuk26@icloud.com"><i class="fas fa-envelope"></i> Email</a>
-					<a class="btn btn-primary contact-trigger" href="#"><i class="fab fa-telegram"></i> Связаться</a>
-				</div>
+			<div class="profile-actions">
+				<a class="btn btn-secondary" href="mailto:vladislav.kostiuk26@icloud.com"><i class="fas fa-envelope"></i> Email</a>
+				<a class="btn btn-primary" href="https://t.me/vlad_note" target="_blank" rel="noopener noreferrer"><i class="fab fa-telegram"></i> Telegram</a>
+			</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="socials-list">
 		<div class="container">
-							<div class="link-card full">
-					<div class="link-left">
-						<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram">
-						<div class="link-texts">
-							<div class="link-title">Instagram</div>
-							<div class="link-sub">instagram.com/vladislav12.03</div>
-						</div>
+						<a class="link-card full" href="https://www.instagram.com/vladislav12.03/" target="_blank">
+				<div class="link-left">
+					<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram">
+					<div class="link-texts">
+						<div class="link-title">Instagram</div>
+						<div class="link-sub">instagram.com/vladislav12.03</div>
 					</div>
-					<a class="link-go" href="https://www.instagram.com/vladislav12.03/" target="_blank"><i class="fas fa-arrow-right"></i></a>
 				</div>
+				<div class="link-go"><i class="fas fa-arrow-right"></i></div>
+			</a>
 
-			<div class="link-row">
-				<div class="link-card">
-					<div class="link-left">
-						<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg" alt="TikTok">
-						<div class="link-texts">
-							<div class="link-title">TikTok</div>
-							<div class="link-sub">tiktok.com/@vladislav26.03</div>
-						</div>
+		<div class="link-row">
+			<a class="link-card" href="https://www.tiktok.com/@vladislav26.03?_t=ZM-8zDli5TR1sL&_r=1" target="_blank">
+				<div class="link-left">
+					<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg" alt="TikTok">
+					<div class="link-texts">
+						<div class="link-title">TikTok</div>
+						<div class="link-sub">tiktok.com/@vladislav26.03</div>
 					</div>
-					<a class="link-go" href="https://www.tiktok.com/@vladislav26.03?_t=ZM-8zDli5TR1sL&_r=1" target="_blank"><i class="fas fa-arrow-right"></i></a>
 				</div>
-				<div class="link-card">
-					<div class="link-left">
-						<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/telegram.svg" alt="Telegram">
-						<div class="link-texts">
-							<div class="link-title">Telegram</div>
-							<div class="link-sub">t.me/vladislav12_03</div>
-						</div>
+				<div class="link-go"><i class="fas fa-arrow-right"></i></div>
+			</a>
+			<a class="link-card" href="https://t.me/vladislav12_03" target="_blank">
+				<div class="link-left">
+					<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/telegram.svg" alt="Telegram">
+					<div class="link-texts">
+						<div class="link-title">Telegram</div>
+						<div class="link-sub">t.me/vladislav12_03</div>
 					</div>
-					<a class="link-go" href="https://t.me/vladislav12_03" target="_blank"><i class="fas fa-arrow-right"></i></a>
 				</div>
-			</div>
+				<div class="link-go"><i class="fas fa-arrow-right"></i></div>
+			</a>
+		</div>
 
 			<hr class="links-sep"/>
 
-							<div class="link-card full">
-					<div class="link-left">
-						<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/applemusic.svg" alt="Apple Music">
-						<div class="link-texts">
-							<div class="link-title">Apple Music</div>
-							<div class="link-sub">music.apple.com/profile/vladislav_kostiuk</div>
-						</div>
+						<a class="link-card full" href="https://music.apple.com/profile/vladislav_kostiuk" target="_blank">
+				<div class="link-left">
+					<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/applemusic.svg" alt="Apple Music">
+					<div class="link-texts">
+						<div class="link-title">Apple Music</div>
+						<div class="link-sub">music.apple.com/profile/vladislav_kostiuk</div>
 					</div>
-					<a class="link-go" href="https://music.apple.com/profile/vladislav_kostiuk" target="_blank"><i class="fas fa-arrow-right"></i></a>
 				</div>
+				<div class="link-go"><i class="fas fa-arrow-right"></i></div>
+			</a>
 
-			<div class="link-row">
-				<div class="link-card">
-					<div class="link-left">
-						<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/spotify.svg" alt="Spotify">
-						<div class="link-texts">
-							<div class="link-title">Spotify</div>
-							<div class="link-sub">open.spotify.com/user/31mffdwqbshqihd4sevemk5eguiu</div>
-						</div>
+		<div class="link-row">
+			<a class="link-card" href="https://open.spotify.com/user/31mffdwqbshqihd4sevemk5eguiu?si=c18d4d41bee241d2" target="_blank">
+				<div class="link-left">
+					<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/spotify.svg" alt="Spotify">
+					<div class="link-texts">
+						<div class="link-title">Spotify</div>
+						<div class="link-sub">open.spotify.com/user/31mffdwqbshqihd4sevemk5eguiu</div>
 					</div>
-					<a class="link-go" href="https://open.spotify.com/user/31mffdwqbshqihd4sevemk5eguiu?si=c18d4d41bee241d2" target="_blank"><i class="fas fa-arrow-right"></i></a>
 				</div>
+				<div class="link-go"><i class="fas fa-arrow-right"></i></div>
+			</a>
 				<div class="link-card coming">
 					<div class="link-left">
 						<img class="brand-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/youtubemusic.svg" alt="YouTube Music">
@@ -163,20 +164,6 @@
 			</div>
 		</div>
 	</footer>
-
-	<!-- Modal: Contacts -->
-	<div class="modal-backdrop" id="contactModal">
-		<div class="modal">
-			<div class="modal-header">
-				<div class="modal-title">Связаться со мной</div>
-				<button class="modal-close" data-close>&times;</button>
-			</div>
-			<div class="modal-body">
-				<a class="contact-row" href="vladislav.kostiuk26@icloud.com"><i class="fas fa-envelope"></i><span>vladislav.kostiuk26@icloud.com</span></a>
-				<a class="contact-row" href="https://t.me/vlad_note" target="_blank"><i class="fab fa-telegram"></i><span>@vlad_note</span></a>
-			</div>
-		</div>
-	</div>
 
 	<script src="script.js"></script>
 </body>
