--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,6 @@
                         </div>
                         <div class="project-links">
                             <a href="index.html" class="project-link"><i class="fas fa-external-link-alt"></i> Демо</a>
-                            <a href="https://github.com/vladislav12-03/vladislav12-03.github.io" target="_blank" rel="noopener noreferrer" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                         <div class="project-status">
                             <span class="status completed">Завершён</span>
@@ -298,7 +297,7 @@
                 </div>
             </div>
             <div class="github-cta">
-                <a href="https://github.com/vladislav12-03" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                <a href="#" class="btn btn-primary">
                     <i class="fab fa-github"></i>
                     Посмотреть мой GitHub
                 </a>
